# aoc2019

./: .gitignore  pyproject.toml  template.py
day01/: day01.py
day02/: day02.py
day03/: day03.py
day04/: day04.py
day05/: day05.py  intcode.py
day06/: day06.py
day07/: day07.py  intcode.py
day08/: day08.py
day09/: day09.py
day10/: day10.py  day10_cheat.py
day11/: day11.py
day12/: day12.py
day13/: day13.py  intcode.py  pyproject.toml
day14/: day14.py
day15/: day15.py
day16/: day16.py
day17/: day17.py
day18/: day18.py  pyproject.toml
day19/: day19.py  intcode.py
day20/: day20.py
day21/: day21.py
day22/: pyproject.toml
day22/day22/: day22.py
day22/tests/: test_day22.py
day23/: pyproject.toml
day23/day23/: day23.py  intcode.py
day23/tests/: test_day23.py
day24/: pyproject.toml
day24/day24/: day24.py  luis.py
day24/tests/: test_day24.py
src/IntCode/: IntCode.java
src/day22/: Day22.java
